# hg_shared_struct

./: .gitignore  Cargo.toml  LICENSE  README.md  lib.ts
shared/src/: lib.rs
src/: lib.rs  main.rs
src/utils/: seed.rs
