[package]
name = "hg_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
sha3 = "0.10"
specta = { version = "1.0.5", features = ["typescript", "time", "uuid"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
time = "0.3.4"

[dependencies.uuid] 
version = "1.16.0"
default-features = false
features = [ "serde"] 