[package]
name = "hg_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
ts_export = []

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
sha3 = "0.10"
specta = { version = "1.0.5", features = ["typescript", "time", "uuid", "functions"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
time = "0.3.4"
spacetimedb = "1.1.2"
uuid = { version = "1.16.0", default-features = false, features = ["serde"] }